clusters/wrtk8s/arm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arm
  labels:
    pod-security.kubernetes.io/enforce: privileged
