clusters/wrtk8s/arm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arm
  namespace: arm
spec:
  selector:
    app: arm
  ports:
    - port: 8080
      targetPort: 8080
